# protein_structure

./: .gitignore  README.md  devserver.sh  get_js.py  pyproject.toml  test_server.py
.hypothesis/constants/: 114c5f43af002228  3f226bf57f2ea9b1  43d520127cd17732  606e730861729e0d  f31343d8aadeb735
.hypothesis/examples/04e6b3400353b141/: 074bb61f32b821db  45f39cafefe8bd8e  68c2043d18612294  703c6e5e1827f90d  707164c2cd5e4661  91e4dc73241eadb1  a01bfd12f69b8c12  aa595190560039f4  badbbaaf90f8915c  ca33167a341373c0  ca628ad67add684c  d31a1956fc423485  ed0fe920c8963d90  f404b141fe984ca2  faac1d79fe97e474
.hypothesis/examples/ed0fe920c8963d90/: 6fd1fa87e85ef36e
src/: __main__.py  app.py
src/config/: credentials.yaml  database.yaml  model.yaml  paths.yaml
src/data/: processed_data.pkl
src/data_handling/: main_pipeline.py  ncbi_processor.py  pdb_processor.py  primary_parser.py  tertiary_parser.py
src/database_handling/: database_manager.py  db_models.py
src/model/: feature_engineering.py  model_evaluation.py  model_training.py
src/static/: index.html
src/static/js/: main.js
src/utils/: config_loader.py
static/: index.html
static/css/: main.css
static/js/: main.js
tests/: test_feature_engineering.py  test_pdb_processor.py
